--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -3,14 +3,8 @@ campo.cpf.obrigatorio=O campo cpf e obrigatorio.
 campo.endereco.obrigatorio=O campo endereço e obrigatorio.
 campo.cpf.invalido=CPF esta invalido.
 
-
+campo.username.obrigatorio=O campo username e obrigatorio.
 
 campo.razao_social.obrigatorio=O campo razao social e obrigatorio.
 campo.cnpj.obrigatorio=O campo cnpj e obrigatorio.
 campo.cnpj.invalido=CNPJ esta invalido.
-
-
-campo.conta.invalido=O campo conta e obrigatorio.
-campo.agencia.invalido=O campo agencia e obrigatorio.
-campo.tipo_conta.invalido=O campo tipo conta e obrigatorio.
-campo.saldo.invalido=O campo saldo e obrigatorio.
